--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "PUT YOUR TEST COMMAND HERE",
+    "test": "$(npm bin)/cypress run",
+    "cypress:open": "$(npm bin)/cypress open",
     "build": "tsc",
     "clean": "rimraf dist",
     "dev": "npm run clean && run-p dev:**",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.4",
+    "cypress": "^7.7.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
